--- a/la_labs/student_materials/s3_static_website/error.html
+++ b/la_labs/student_materials/s3_static_website/error.html
@@ -1,1 +1,9 @@
-<p>Sorry! We mad a mistake!</p>
+<!doctype html>
+<html>
+<head>
+</head>
+
+<body>
+<p>This page was not found. Sorry! Did you mean to go to the <a href="./index.html">home page</a>?</p>
+</body>
+</html>
